discussion/kv_engine/149093/149093_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP: Add magma WriteDocs histograms for cbstats kvtimings

Change-Id: I7eb4d8c5f2c88653c4e39c56b5a2f0ffa11239ab

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2021-03-30 23:19:37.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-30 23:53:57.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29736/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29736/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34655/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(2519): error C2039: "GetHistograms": is not a member of "magma::Magma" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34655/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8009/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25: error: no member named "GetHistograms" in "magma::Magma" [clang-diagnostic-error]
    auto histo = magma->GetHistograms();
                        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8009/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8009/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8659/ : FAILURE

Compile error at [2021-03-30T23:23:59.736Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8659/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9955/ : FAILURE

Compile error at [2021-03-30T23:21:24.090Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9955/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9730/ : FAILURE

Compile error at [2021-03-30T23:21:16.219Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: ?class magma::Magma? has no member named ?GetHistograms?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9730/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17503/ : FAILURE

Compile error at [2021-03-30T23:23:32.851Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:2519:25:
error: no member named "GetHistograms" in "magma::Magma"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17503/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6553/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9594/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
